--- a/Src/FPSim.App/src/app/sim-app.html
+++ b/Src/FPSim.App/src/app/sim-app.html
@@ -69,23 +69,7 @@
             ]' collapse-with-icon selected-route='["home"]' selected-meta='{}'>
             </px-app-nav>
 
-            <sim-app-breadcrumbs 
-                items='[
-                    {"label":"Projects","id":"projects","children": [
-                        {"label":"Contact Center Options","id":"scenarios","children": [
-                            {"label":"Baseline","id":"scenario1"},
-                            {"label":"Staff Turnover Investment","id":"scenario2"},
-                            {"label":"IVR Investment","id":"scenario3"}]
-                        },
-                        {"label":"Contact Center Options2","id":"scenarios","children": [
-                            {"label":"Baseline","id":"scenario1"},
-                            {"label":"Staff Turnover Investment","id":"scenario2"},
-                            {"label":"IVR Investment","id":"scenario3"}]
-                        }]
-                    }
-                ]' 
-                selected-route='["projects", "scenarios", "scenario3"]'>
-            </sim-app-breadcrumbs>
+            <sim-app-breadcrumbs></sim-app-breadcrumbs>
 
             <div>
                 <projects-view></projects-view>
