Remove the px-app-header as it fixed location was causing layout issues for px-panel

--- a/Src/FPSim.App/ClientApp/views/projects-view/projects-view.html
+++ b/Src/FPSim.App/ClientApp/views/projects-view/projects-view.html
@@ -49,14 +49,15 @@
             </div>
         </px-card>
 
-        
-            <!-- Panel for project name editting -->
-            <!--
+        <!-- Panel for project name editting, needs to be wrapped in a div or container -->
+        <div>
+            <!-- 
             <px-panel id="panel" opened fixed position="right" class="style-scope">
                 <div slot="content">Content</div>
             </px-panel>
             -->
-    
+        </div>
+
     </template>
     <script src="projects-view.js"></script>
 
