--- a/Src/FPSim.App/ClientApp/views/projects-view/projects-view.html
+++ b/Src/FPSim.App/ClientApp/views/projects-view/projects-view.html
@@ -2,7 +2,6 @@
 <link rel="import" href="/bower_components/px-tile/px-tile.html" />
 <link rel="import" href="/bower_components/px-tooltip/px-tooltip.html" />
 <link rel="import" href="/bower_components/px-card/px-card.html" />
-<link rel="import" href="/bower_components/px-panel/px-panel.html" />
 
 <!-- 
     App
@@ -18,6 +17,7 @@
     Elements
 -->
 <link rel="import" href="/clientapp/elements/project-tile/project-tile.html">
+<link rel="import" href="/clientapp/views/projects-view/projects-new-panel.html">
 
 <dom-module id="projects-view">
     <template>
@@ -31,7 +31,7 @@
         <!-- A card conatins all project items -->
         <px-card header-text="Projects" icon="analysis">
             <div class='actions'>
-                <px-icon id="projects-add" icon='px-utl:add'></px-icon>
+                <px-icon id="projects-add" icon='px-utl:add' on-tap="handleAdd"></px-icon>
                 <px-icon id="projects-view-tile" icon='px-nav:grid-view'></px-icon>
                 <px-icon id="projects-view-list" icon='px-nav:list-view'></px-icon>
                 <px-icon id="projects-help" icon='px-utl:help'></px-icon>
@@ -49,14 +49,7 @@
             </div>
         </px-card>
 
-        <!-- Panel for project name editting, needs to be wrapped in a div or container -->
-        <div>
-            <!-- 
-            <px-panel id="panel" opened fixed position="right" class="style-scope">
-                <div slot="content">Content</div>
-            </px-panel>
-            -->
-        </div>
+        <projects-new-panel id="newProjectPanel"></projects-new-panel>
 
     </template>
     <script src="projects-view.js"></script>
