Add the redux store to store local state

--- a/Src/FPSim.App/ClientApp/views/projects-view/projects-new-panel.html
+++ b/Src/FPSim.App/ClientApp/views/projects-view/projects-new-panel.html
@@ -12,6 +12,11 @@
 -->
 <link rel="import" href="/clientapp/app/sim-app-config.html" />
 
+<!-- 
+    Redux store
+-->
+<link rel="import" href="/clientapp/store/reducers/reducers.html" />
+
 <!--
     Style
 -->
