--- a/Src/FPSim.App/ClientApp/views/projects-view/projects-view.html
+++ b/Src/FPSim.App/ClientApp/views/projects-view/projects-view.html
@@ -8,6 +8,11 @@
 -->
 <link rel="import" href="/clientapp/app/sim-app-config.html" />
 
+<!-- 
+    Redux store
+-->
+<link rel="import" href="/clientapp/store/reducers/reducers.html" />
+
 <!--
     Style
 -->
