--- a/Src/FPSim.App/ClientApp/views/projects-view/projects-new-panel.html
+++ b/Src/FPSim.App/ClientApp/views/projects-view/projects-new-panel.html
@@ -6,6 +6,7 @@
 <link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
 <link rel="import" href="/bower_components/paper-button/paper-button.html">
 <link rel="import" href="/bower_components/paper-toast/paper-toast.html">
+<script src="/clientapp/utils/base64-arrayBuffer.js"></script>
 
 <!-- 
     App
@@ -54,7 +55,7 @@
 
         <!-- Post the new project to persist it -->
         <iron-ajax id="postProject" method="post" url="[[postUrl]]" handle-as="json" content-type="application/json" on-error="handleError"
-            on-response="handleResponse" , loading="{{isPosting}}">
+            on-response="handleResponse" loading="{{isPosting}}">
         </iron-ajax>
 
         <!-- Panel for project name editting, needs to be wrapped in a div or some other container -->
@@ -77,8 +78,8 @@
                             <paper-textarea rows="7" label="Description" value={{projectDescription}} disabled$="{{isPosting}}" placeholder="Project description"></paper-textarea>
                         </div>
                         <div>
-                            <px-file-upload message="Image" multiple accept=".png,image/png" disabled$="{{isPosting}}"></px-file-upload>
-                            <img src="http://localhost:2362/api/project/12/image" />
+                            <px-file-upload id="fileUpload" message="Image" multiple accept=".png,image/png" disabled$="{{isPosting}}"></px-file-upload>
+                            <img id="projectImage" />
                         </div>
                     </div>
                     <div class="command-container-bottom command-border">
